# unemployment-speedrun

./: .gitignore  PROGRESS.md  README.md  SETUP.md  applicant_profile.json  job-application-agent-plan.md  main.py  pyproject.toml
browser/: tools.py
handlers/: greenhouse.py  lever.py
modules/: application_executor.py  cover_letter.py  job_intelligence.py
prompts/: cover_letter.py  extraction.py
sheets/: client.py
